Fix IPORoadmap horizontal scroll bug on mobile

--- a/sangoe/components/home/IPORoadmap.module.css
+++ b/sangoe/components/home/IPORoadmap.module.css
@@ -84,8 +84,6 @@
 }
 
 .trackScrollArea {
-  display: flex;
-  justify-content: center;
   width: 100%;
 }
 
